include/dss_capi.h

    /*! 
    Description of error for last operation
    */
    DSS_CAPI_DLL const char* Error_Get_Description(void);
    /*! 
    Error Number (returns current value and then resets to zero)
    */
    DSS_CAPI_DLL int32_t Error_Get_Number(void);
    /*! 
    Integer pointer to the Error Number. Remember to reset its value to zero after the error treatment.
    */
    DSS_CAPI_DLL int32_t* Error_Get_NumberPtr(void);
    /*! 
    Gets/sets the DSS script error-handling behavior. If a warning or error
    occurs and early abortion is enabled (default), the processing of the
    script is always halted. Otherwise, the processing of the script continues
    until a major error occurs or it finishes.
    
    (API Extension)
    */
    DSS_CAPI_DLL uint16_t Error_Get_EarlyAbort(void);
    DSS_CAPI_DLL void Error_Set_EarlyAbort(uint16_t Value);